native v2: keep content repository API-24 compatible